--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "omidsalari/laravel-auth": "*",
-        "omidsalari/snapp-food-deliver-system": "*"
+        "omidsalari/snapp-food-deliver-system": "*",
+        "php-amqplib/php-amqplib": "^3.2"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
